ADD: Adicionei as estruturas basicas do jogo(jogador, tabuleiro e casa do tabuleiro

--- a/haskell/dist-newstyle/packagedb/ghc-9.6.7/banco-imobiliario-0.1.0.0-inplace.conf
+++ b/haskell/dist-newstyle/packagedb/ghc-9.6.7/banco-imobiliario-0.1.0.0-inplace.conf
@@ -9,7 +9,7 @@ author:               Everton Daniel
 category:             Game
 abi:                  inplace
 exposed:              True
-exposed-modules:      MyLib
+exposed-modules:      Game.Board Game.BoardHouse Game.Player MyLib
 import-dirs:
     "C:\\Users\\Everton Daniel\\workspace\\projeto_plp\\haskell\\dist-newstyle\\build\\x86_64-windows\\ghc-9.6.7\\banco-imobiliario-0.1.0.0\\build"
 
