--- a/haskell/banco-imobiliario.cabal
+++ b/haskell/banco-imobiliario.cabal
@@ -59,7 +59,7 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules:  MyLib, Game.Player, Game.BoardHouse, Game.Board
+    exposed-modules:  MyLib, Game.Player, Game.BoardHouse, Game.Board, Game.GameLoop, Game.GameState, Game.Ranking
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -68,10 +68,13 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0
-
+    build-depends:    base >=4.18 && <4.19,
+		      directory,
+	              random
+		      
     -- Directories containing source files.
     hs-source-dirs:   src
+    default-language Haskell2010
 
     -- Base language which the package is written in.
     default-language: Haskell2010
@@ -91,7 +94,7 @@ executable banco-imobiliario
 
     -- Other library packages from which modules are imported.
     build-depends:
-        base ^>=4.18.3.0,
+        base >=4.18 &&  <4.19,
         banco-imobiliario
 
     -- Directories containing source files.
@@ -124,5 +127,5 @@ test-suite banco-imobiliario-test
 
     -- Test dependencies.
     build-depends:
-        base ^>=4.18.3.0,
+        base >=4.18 && <4.19,
         banco-imobiliario
