refactor: Melhoria no codigo de GameLooop
O codigo do loop principal foi melherado visando um bom codigo

Os prints do programa foram movidos parcialmente para a classe interface para
melhorar legibilidade e modularização

Nenhuma mecânica do jogo foi alterado nesse commit e o codigo original
se mantem quase intacto apenas foi organizado melhor

--- a/haskell/banco-imobiliario.cabal
+++ b/haskell/banco-imobiliario.cabal
@@ -59,7 +59,7 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules:  MyLib, Game.Player, Game.BoardHouse, Game.Board, Game.GameLoop, Game.Ranking
+    exposed-modules:  MyLib, Game.Player, Game.BoardHouse, Game.Board, Game.GameLoop, Game.Ranking, Game.Interface
 
     -- Modules included in this library but not exported.
     -- other-modules:
