--- a/banco-imobiliario.cabal
+++ b/banco-imobiliario.cabal
@@ -59,7 +59,7 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules:  MyLib, Game.Board, Game.BoardHouse, Game.GameState, Game.Player, Game.Ui
+    exposed-modules:  MyLib, Game.Player, Game.BoardHouse, Game.Board, Game.GameLoop, Game.Ranking, Game.Interface
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -68,7 +68,9 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0
+    build-depends:    base ^>=4.18.3.0,
+                directory,
+                    random
 
     -- Directories containing source files.
     hs-source-dirs:   haskell/src
