--- a/haskell/banco-imobiliario.cabal
+++ b/haskell/banco-imobiliario.cabal
@@ -68,13 +68,10 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base >=4.18 && <4.19,
-		      directory,
-	              random
+    build-depends:    base >=4.18 && <4.19, directory, random
 		      
     -- Directories containing source files.
     hs-source-dirs:   src
-    default-language Haskell2010
 
     -- Base language which the package is written in.
     default-language: Haskell2010
