feat: adicionei um clear no terminal a cada rodada

--- a/haskell/banco-imobiliario.cabal
+++ b/haskell/banco-imobiliario.cabal
@@ -68,7 +68,7 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base >=4.18 && <4.19, directory, random
+    build-depends:    base >=4.18 && <4.19, directory, random, process
 		      
     -- Directories containing source files.
     hs-source-dirs:   src
